welcome.lessons.welcome.array.array667.Array667.scala.error
array667:14: error: value c2 is not a member of Int
  return c1 c2 ;
            ^